# telegram-agent-mcp

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  README_DATABASE.md  SCRIPTS.md  dev.db  env.example  pyproject.toml  pytest.ini  run.sh  start_mcp_services.py
assets/: mcp-servers.json
examples/: database_usage_example.py
mcp_servers/database_service/: __init__.py  main.py
mcp_servers/reply_service/: main.py
src/: agent.py  config.py  constants.json  constants.py  database.py  envs.py  main.py  mcp_tools.py  models.py  storage.py  telegram_bot_app.py  user.py
src/database/: __init__.py  config.py  database.py  models.py
src/mcp/: manage_user_groups.py  server.py  telegram.py
src/mcp_utils/: manage_user_groups.py  server.py  telegram_utils.py
src/token_auth_db/: models.py
src/user_group_db/: models.py
test/: conftest.py  test_database.py  test_storage.py  test_token_registration.py  test_user.py
test/mcp/: test_telegram.py
test/mcp_utils/: test_telegram.py
test/token_auth/: test_token_registration.py  test_user.py
test/user_group/: conftest.py  test_group.py
