[project]
name = "telegram-agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "python-telegram-bot[webhooks]>=22.3",
    "sqlalchemy>=2.0.42",
    "langchain>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.6.4",
    "fastmcp>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.7",
]
