[project]
name = "telegram-agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "python-telegram-bot[webhooks]>=22.3",
    "sqlalchemy>=2.0.42",
    "fastmcp>=0.1.0",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.7",
]
